# polymarket-pro-rust

./: .env.example  .gitignore  AUDIT_REPORT.md  BUG_CHECK_REPORT.md  BUG_FIX_SUMMARY.md  BUG_REPORT.md  COMPARISON_CHECKLIST.md  CONFIG_MIGRATION.md  Cargo.toml  DETAILED_DIFFERENCES.md  FINAL_COMPLETE_DIFF.md  FINAL_DETAILED_DIFF.md  FINAL_DIFF_REVIEW.md  FIX_COMPLETE.md  GITHUB_TOKEN_GUIDE.md  INTEGRATION_TEST_REPORT.md  LIVE_READY.md  LIVE_TRADING_CHECKLIST.md  LOCK_OPTIMIZATION.md  MIGRATION_NOTES.md  MM_STRATEGY_LOGIC.md  ORDER_FLOW_COMPARISON.md  ORDER_FLOW_FIXED.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUMMARY.md  PYTHON_RUST_COMPARISON.md  PYTHON_RUST_DETAILED_DIFF.md  PYTHON_RUST_DIFF.md  PYTHON_RUST_FINAL_DIFF.md  PYTHON_RUST_REMAINING_DIFF.md  PYTHON_VS_RUST_SCORE.md  README.md  SECURITY_AUDIT.md  SECURITY_FIX_COMPLETE.md  TODO_LIST.md  UPDATE_CHECKLIST.md  derive_address.sh  polymarket-pro.example.toml  polymarket-pro.service  run.sh  (+8 more)
docs/: API.md  COMPARISON.md  DEPLOYMENT.md  ORDERBOOK.md
examples/: check_markets.rs  test_market_rotation.rs
src/: btc_market.rs  dual_sided.rs  lib.rs  main.rs  market_manager.rs
src/api/: clob.rs  gamma.rs  market.rs  mod.rs
src/app/: init.rs  mod.rs
src/config/: manager.rs  mod.rs
src/redeem/: mod.rs
src/trading/: balance.rs  callbacks.rs  errors.rs  executor.rs  exit_manager.rs  market_maker.rs  mod.rs  order.rs  order_tracker.rs  orderbook.rs  position.rs  price_warning.rs  simulation.rs  stats.rs  trade_history.rs
src/utils/: mod.rs  rate_limiter.rs  retry.rs
src/wallet/: mod.rs  safe.rs
src/websocket/: mod.rs
tests/: integration_test.rs  integration_tests.rs
